--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -311,6 +311,17 @@ h1, h2, h3, h4, h5, h6 {
 /*--------------------------------------------------------------
 # Hero Section
 --------------------------------------------------------------*/
+#message{
+  width: 100%;
+  height: 92vh;
+  background: url("../img/hero-bg.jpg") top center no-repeat;
+  background-size: cover;
+  position: relative;
+  padding-top: 82px;
+}
+#mensagem{
+  margin-top: 400px;
+}
 #hero {
   width: 100%;
   height: 92vh;
