--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1158,7 +1158,7 @@ section {
 # Contact
 --------------------------------------------------------------*/
 #contact{
-  background: #396C54;
+  background: #FFFF;
 }
 .contact .info-box {
   color: #444444;
